# foundry-ptu-estimator

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  azure.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.squad/: .first-run  routing.md  team.md
.squad/agents/backend/: charter.md  history.md
.squad/agents/data/: charter.md  history.md
.squad/agents/devops/: charter.md  history.md
.squad/agents/lead/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/tester/: charter.md  history.md
.squad/casting/: registry.json
.squad/identity/: now.md  wisdom.md
docs/: query_data.csv
infra/: main.bicep  main.parameters.json
infra/modules/: aca-environment.bicep  aca-job.bicep  acr.bicep  foundry-diagnostics.bicep  foundry-rbac.bicep  log-analytics.bicep  managed-identity.bicep  storage.bicep
scripts/: loop_run_once.py
src/tpu_est/: __main__.py  cli.py  client.py  config.py  corpus.py  logging_setup.py  prompt.py
src/tpu_est/data/corpus/: LICENSE.md  MANIFEST.md  anna-karenina.txt  bleak-house.txt  count-of-monte-cristo.txt  don-quixote.txt  moby-dick.txt  war-and-peace.txt
tests/: conftest.py  test_client_retry.py  test_config.py  test_jitter.py  test_prompt_sizing.py
