[project]
name = "tpu-est"
version = "0.1.0"
description = "Azure AI Foundry traffic generator for PTU sizing via ptucalc.com"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.19.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tpu_est"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["tpu_est"]

[[tool.mypy.overrides]]
module = "tiktoken.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
